kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: time-capsule
spec:
  selector:
    app: api
  ports:
   - port: 5000
     targetPort: 5000
