kubernetes/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: time-capsule
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.time-capsule.sebastiaan.tech
    secretName: api-tls-secret
  rules:
  - host: api.time-capsule.sebastiaan.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
  ingressClassName: nginx
